# 2023-s1-ci

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml
simple_web_app/: exceptions.py  models.py  string_validators.py  test_unit.py
