[tool.poetry]
name = "ci-example"
version = "0.1.0"
description = "a project to support continuous integration classes"
authors = ["André Portela <portela.eng@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ci_example"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"
pytest = "^8.3.3"
httpx = "^0.27.2"
flake8-bugbear = "^24.8.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
